--- a/index.html
+++ b/index.html
@@ -1,1 +1,78 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ace Photography</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <main>
+        <div id="landing">
+            <div id="landing-text">
+                <div id="landing-text-inner">
+                    <h1>Ace Photography</h1>
+                    <h2>World Through Lense</h2>
+                    <a href="#images" class="btn" id="view-work">
+                        View Work
+                    </a>
+                </div>
+            </div>
+            <div id="landing-image"></div>
+        </div>
+
+        <div id="images">
+            <div id="header">
+                <h2>Our Work</h2>
+            </div>
+
+            <img src="https://source.unsplash.com/1600x900/?night" alt="">
+            <div class="caption">
+                <h3><| One |></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi labore ullam mollitia eveniet vitae similique consequuntur ratione dolorem voluptatem. Perferendis odit quod cupiditate debitis, corporis amet pariatur unde eos accusamus!</p>
+            </div>
+            <img src="https://source.unsplash.com/1600x900/?nature,leaf" alt="">
+            <div class="caption">
+                <h3><| Two |></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi labore ullam mollitia eveniet vitae similique consequuntur ratione dolorem voluptatem. Perferendis odit quod cupiditate debitis, corporis amet pariatur unde eos accusamus!</p>
+            </div>
+            <img src="https://source.unsplash.com/1600x900/?nature,flowers" alt="">
+            <div class="caption">
+                <h3><| Three |></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi labore ullam mollitia eveniet vitae similique consequuntur ratione dolorem voluptatem. Perferendis odit quod cupiditate debitis, corporis amet pariatur unde eos accusamus!</p>
+            </div>
+            <img src="https://source.unsplash.com/1600x900/?nature,animals" alt="">
+            <div class="caption">
+                <h3><| Four |></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi labore ullam mollitia eveniet vitae similique consequuntur ratione dolorem voluptatem. Perferendis odit quod cupiditate debitis, corporis amet pariatur unde eos accusamus!</p>
+            </div>
+            <img src="https://source.unsplash.com/1600x900/?cinematic" alt="">
+            <div class="caption">
+                <h3><| Five |></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi labore ullam mollitia eveniet vitae similique consequuntur ratione dolorem voluptatem. Perferendis odit quod cupiditate debitis, corporis amet pariatur unde eos accusamus!</p>
+            </div>
+            <img src="https://source.unsplash.com/1600x900/?butterfly" alt="">
+            <div class="caption">
+                <h3> <| Six |></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi labore ullam mollitia eveniet vitae similique consequuntur ratione dolorem voluptatem. Perferendis odit quod cupiditate debitis, corporis amet pariatur unde eos accusamus!</p>
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        
+        <hr>
+        <h3>Get In Touch</h3>
+        <br>
+            <strong>contact@acephotography.com</strong>
+        </p>
+        <p>Phone:
+            <strong>7776665550</strong>
+        </p>
+        <hr>
+    </footer>
+    
+</body>
+</html>
 
